Implementada a confirmação e desconfirmação de destino.
